--- a/index.html
+++ b/index.html
@@ -426,61 +426,48 @@ width:300px;
           item.className = "item";
           item.innerHTML = `<strong>${title}</strong><small>${desc}</small>`;
 
-      item.onclick = async () => {
-  const matchId = href.match(/(\d{2,7})\/?$/);
-
-  if (matchId) {
-    const fullURL = downloadPrefix + matchId[1];
-
-    // Create and show "Please wait..." message
-    const waitMsg = document.createElement("p");
+    item.onclick = async () => {
+            const matchId = href.match(/(\d{2,7})\/?$/);
+            if (matchId) {
+              const fullURL = downloadPrefix + matchId[1];
+ const waitMsg = document.createElement("p");
     waitMsg.style.color = "orange";
     waitMsg.textContent = "Please wait...";
     item.appendChild(waitMsg);
-
-    try {
-      const source = await fetchWithRetry(fullURL);
-
-      const linkMatch = source.match(/<a\s+href="([^"]+)"[^>]*>click here to Download<\/a>/i);
-
-      if (linkMatch) {
-        let downloadLink = linkMatch[1];
-        if (downloadLink.startsWith("//")) {
-          downloadLink = "https:" + downloadLink;
-        }
-
-        // Remove the "Please wait..." message
-        if (waitMsg.parentNode === item) {
+                
+              try {
+                const source = await fetchWithRetry(fullURL);
+                const linkMatch = source.match(/<a\s+href="([^"]+)"[^>]*>click here to Download<\/a>/i);
+                if (linkMatch) {
+                  let downloadLink = linkMatch[1];
+                  if (downloadLink.startsWith("//")) downloadLink = "https:" + downloadLink;
+if (waitMsg.parentNode === item) {
           item.removeChild(waitMsg);
         }
 
-        // Create download button
-        const br = document.createElement("br");
-        const btn = document.createElement("a");
-        btn.href = downloadLink;
-        btn.textContent = "Download";
-        btn.className = "download-btn";
-        btn.target = "_self";
-
-        item.appendChild(br);
-        item.appendChild(btn);
-      } else {
-        // Update message to "link not found"
-        waitMsg.style.color = "orange";
-        waitMsg.textContent = "⚠️ Download link not found.";
-      }
-    } catch (e) {
-      // Update message to "fetch failed"
-      waitMsg.style.color = "red";
-      waitMsg.textContent = "❌ Failed to fetch download.";
-    }
-
-  } else {
-    // Fallback if matchId isn't found
-    fetchAndRender(baseURL + href);
-  }
-};
-
+                  const btn = document.createElement("a");
+                  btn.href = downloadLink;
+                  btn.textContent = "Download";
+                  btn.className = "download-btn";
+                  btn.target = "_self";
+                 item.appendChild(document.createElement("br"));
+                 item.appendChild(btn);
+                } else {
+                  const msg = document.createElement("p");
+                  msg.style.color = "orange";
+                  msg.textContent = "⚠️ Download link not found.";
+                  item.appendChild(msg);
+                }
+              } catch (e) {
+                const msg = document.createElement("p");
+                msg.style.color = "red";
+                msg.textContent = "❌ Failed to fetch download.";
+                item.appendChild(msg);
+              }
+            } else {
+              fetchAndRender(baseURL + href);
+            }
+          };
 
 
           resultsDiv.appendChild(item,tip);
