--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@ if (waitMsg.parentNode === item) {
           };
 
 
-          resultsDiv.appendChild(item,tip);
+          resultsDiv.appendChild(item);
         }
 
         const titleMatch = html.match(/<h2 class="head">(.*?)<\/h2>/);
