--- a/index.html
+++ b/index.html
@@ -208,21 +208,10 @@ width:300px;
     }
 
     #status-log {
-      margin-top: 30px;
-      font-size: 14px;
+     display:none;
     }
 
-    #status-log div {
-      margin-bottom: 5px;
-    }
-
-    #status-log .done {
-      color: green;
-    }
-
-    #status-log .error {
-      color: red;
-    }
+ 
   </style>
 
 
@@ -347,6 +336,9 @@ width:300px;
   }
 }
 </style>
+
+  <br/>
+  <br/>
   <!-- Your Script -->
   <script>
     const searchBox = document.getElementById("searchBox");
