--- a/index.html
+++ b/index.html
@@ -472,7 +472,8 @@ if (unwantedBtn) {
   // ✅ Show "Please wait..." message (only for .menu a clicks)
   const resultsDiv = document.getElementById("results");
   const waitMsg = document.createElement("div");
-  waitMsg.textContent = "Please wait...",<br/>"ஒரு வேளை வீடியோ டவுன்லோடு ஆகவில்லை என்றால், மீண்டும் தேடிப் பாருங்கள்.. கண்டிப்பாக டவுன்லோடு ஆகும் ✅";
+  waitMsg.textContent = "Please wait...";
+  waitMsg.textContent = "ஒரு வேளை வீடியோ டவுன்லோடு ஆகவில்லை என்றால், மீண்டும் தேடிப் பாருங்கள்.. கண்டிப்பாக டவுன்லோடு ஆகும் ✅"; 
   waitMsg.style.marginTop = "10px";
   waitMsg.style.color = "Black";
   waitMsg.style.fontStyle = "italic";
