--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@ width:300px;
         } catch (e) {
           console.warn(`Attempt ${i + 1} failed. Retrying...`);
           if (i === attempts - 1) {
-            resultsDiv.innerHTML = `<p style="color:red;">⚠️ Failed to load after ${attempts} attempts.</p>`;
+            resultsDiv.innerHTML = `<p style="color:red;">⚠️Refresh and Type full name </p>`;
           }
           await new Promise(resolve => setTimeout(resolve, delay));
         }
@@ -472,8 +472,8 @@ if (unwantedBtn) {
   // ✅ Show "Please wait..." message (only for .menu a clicks)
   const resultsDiv = document.getElementById("results");
   const waitMsg = document.createElement("div");
-  waitMsg.textContent = "Please wait...";
-  waitMsg.textContent = "ஒரு வேளை வீடியோ டவுன்லோடு ஆகவில்லை என்றால், மீண்டும் தேடிப் பாருங்கள்.. கண்டிப்பாக டவுன்லோடு ஆகும் ✅"; 
+ 
+  waitMsg.textContent = "Please wait....            ஒரு வேளை வீடியோ டவுன்லோடு ஆகவில்லை என்றால், மீண்டும் தேடிப் பாருங்கள்.. கண்டிப்பாக டவுன்லோடு ஆகும் ✅"; 
   waitMsg.style.marginTop = "10px";
   waitMsg.style.color = "Black";
   waitMsg.style.fontStyle = "italic";
