--- a/index.html
+++ b/index.html
@@ -480,7 +480,8 @@ waitMsg.style.color = "black";
 waitMsg.style.fontStyle = "italic";
 waitMsg.className = "wait-message";
 resultsDiv.appendChild(waitMsg);
-
+<br/>
+                           <br/>
 // Message 2: Tamil retry message
 const retryMsg = document.createElement("div");
 retryMsg.textContent = "ஒரு வேளை வீடியோ டவுன்லோடு ஆகவில்லை என்றால், மீண்டும் தேடிப் பாருங்கள்.. கண்டிப்பாக டவுன்லோடு ஆகும் ✅";
@@ -563,7 +564,15 @@ const fullUrl = rawHref.startsWith("http") ? rawHref : baseURL + rawHref;
 
                 let inner = "<strong>🎯 Thanks for Downloading...</strong><br><ul>";
                 foundUrls.forEach(url => {
-                 inner += `<button onclick="window.open('${url}', '_blank'); location.reload();">Download</button>`;
+               inner += `<button style="display: inline-block;
+  background: #007bff;
+  color: white;
+  padding: 6px 12px;
+  margin: 5px 5px 0 0;
+  border-radius: 6px;
+  text-decoration: none;"
+  onclick="window.open('${url}', '_blank'); location.reload();">Download</button>`;
+
                 });
                 inner += "</ul>";
 
