--- a/index.html
+++ b/index.html
@@ -1,217 +1,170 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Movie Download Search</title>
-  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;800&amp;display=swap" rel="stylesheet" />
-<style>
-  :root {
-    --bg: #0e1015;
-    --card: rgba(255, 255, 255, 0.05);
-    --accent: #4a90e2;
-    --accent2: #8e44ad;
-    --text: #f0f0f0;
-    --muted: #888;
-  }
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;800&display=swap" rel="stylesheet" />
 
-  * {
-    box-sizing: border-box;
-  }
+  <style>
+    :root {
+      --bg: #0e1015;
+      --card: rgba(255, 255, 255, 0.05);
+      --accent: #4a90e2;
+      --accent2: #8e44ad;
+      --text: #f0f0f0;
+      --muted: #888;
+    }
 
-  body {
-    margin: 0;
-    font-family: 'Outfit', sans-serif;
-    background: var(--bg);
-    color: var(--text);
-  }
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
 
-  header {
-    text-align: center;
-    padding: 40px 20px;
-    font-size: 2.5rem;
-    font-weight: 800;
-    background: linear-gradient(to right, var(--accent), var(--accent2));
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-  }
+    body {
+      font-family: 'Outfit', sans-serif;
+      background: var(--bg);
+      color: var(--text);
+      line-height: 1.6;
+    }
 
-  footer {
-    text-align: center;
-    padding: 30px 20px;
-    font-size: 0.9rem;
-    color: var(--muted);
-  }
+    header {
+      text-align: center;
+      padding: 40px 20px 20px;
+      font-size: 2.5rem;
+      font-weight: 800;
+      background: linear-gradient(to right, var(--accent), var(--accent2));
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
 
-  .container {
-    max-width: 900px;
-    margin: 0 auto;
-    padding: 20px;
-  }
+    .container {
+      max-width: 1000px;
+      margin: auto;
+      padding: 20px;
+    }
 
-  input,
-  button {
-    padding: 14px;
-    border-radius: 8px;
-    font-size: 1rem;
-    border: none;
-    outline: none;
-    transition: all 0.3s ease;
-  }
+    .search-box {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      justify-content: center;
+      margin-bottom: 30px;
+    }
 
-  input {
-    width: 70%;
-    background: var(--card);
-    color: var(--text);
-    border: 1px solid #333;
-    margin-right: 10px;
-  }
+    input,
+    button {
+      padding: 14px;
+      border-radius: 8px;
+      font-size: 1rem;
+      border: none;
+      outline: none;
+      transition: all 0.3s ease;
+    }
 
-  input::placeholder {
-    color: var(--muted);
-  }
-
-  button {
-    background: linear-gradient(to right, var(--accent), var(--accent2));
-    color: white;
-    font-weight: bold;
-    cursor: pointer;
-  }
-
-  button:hover {
-    filter: brightness(1.2);
-  }
-
-  .movie {
-    background: var(--card);
-    border-radius: 16px;
-    padding: 20px;
-    margin-top: 20px;
-    backdrop-filter: blur(8px);
-    box-shadow: 0 0 15px rgba(255, 255, 255, 0.05);
-    transition: 0.3s;
-  }
-
-  .movie:hover {
-    transform: scale(1.02);
-  }
-
-  .movie strong {
-    color: var(--accent);
-  }
-
-  .dlink a {
-    display: inline-block;
-    margin-top: 10px;
-    background: var(--accent);
-    color: white;
-    text-decoration: none;
-    padding: 10px 18px;
-    border-radius: 6px;
-    font-weight: 600;
-    transition: all 0.3s;
-  }
-
-  .dlink a:hover {
-    background: var(--accent2);
-  }
-
-  .status {
-    margin-top: 10px;
-    color: var(--muted);
-  }
-
-  @media (max-width: 600px) {
     input {
-      width: 100%;
-      margin: 0 0 10px 0;
+      flex: 1 1 300px;
+      background: var(--card);
+      color: var(--text);
+      border: 1px solid #333;
+    }
+
+    input::placeholder {
+      color: var(--muted);
     }
 
     button {
-      width: 100%;
+      background: linear-gradient(to right, var(--accent), var(--accent2));
+      color: white;
+      font-weight: bold;
+      cursor: pointer;
+      flex: 0 0 auto;
     }
-  }
 
-  .telegram-icon-center {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 30px 0;
-  }
-
-  .telegram-icon {
-    background: linear-gradient(to right, #4a90e2, #8e44ad);
-    width: 64px;
-    height: 64px;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    box-shadow: 0 0 12px rgba(138, 43, 226, 0.5);
-    animation: pulse 2s infinite ease-in-out;
-    transition: transform 0.3s ease;
-    text-decoration: none;
-  }
-
-  .telegram-icon:hover {
-    transform: scale(1.1);
-  }
-
-  .telegram-icon svg {
-    width: 28px;
-    height: 28px;
-  }
-
-  @keyframes pulse {
-    0% {
-      box-shadow: 0 0 0 30px rgba(138, 43, 226, 0.4);
+    button:hover {
+      filter: brightness(1.2);
     }
-    70% {
-      box-shadow: 0 0 0 80px rgba(138, 43, 226, 0);
+
+    .card-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 20px;
     }
-    100% {
-      box-shadow: 0 0 0 0 rgba(138, 43, 226, 0);
+
+    .movie {
+      background: var(--card);
+      border-radius: 16px;
+      padding: 20px;
+      backdrop-filter: blur(8px);
+      box-shadow: 0 0 15px rgba(255, 255, 255, 0.05);
+      transition: 0.3s;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
     }
-  }
 
-  #loadingOverlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: white;
-    color: black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 9999;
-    flex-direction: column;
-    font-family: 'Outfit', sans-serif;
-  }
+    .movie:hover {
+      transform: scale(1.02);
+    }
 
-  #loadingOverlay h2 {
-    font-size: 1.8rem;
-    margin-bottom: 10px;
-  }
+    .movie strong {
+      color: var(--accent);
+    }
 
-  #loadingOverlay p {
-    font-size: 1.2rem;
-    color: #555;
-  }
-</style>
+    .dlink a {
+      display: inline-block;
+      margin-top: 10px;
+      background: var(--accent);
+      color: white;
+      text-decoration: none;
+      padding: 10px 18px;
+      border-radius: 6px;
+      font-weight: 600;
+      transition: all 0.3s;
+    }
 
+    .dlink a:hover {
+      background: var(--accent2);
+    }
+
+    .status {
+      margin-top: 10px;
+      color: var(--muted);
+    }
+
+    footer {
+      text-align: center;
+      padding: 30px 20px;
+      font-size: 0.9rem;
+      color: var(--muted);
+    }
+
+    /* Responsive Tweaks */
+    @media (max-width: 600px) {
+      .search-box {
+        flex-direction: column;
+        align-items: stretch;
+      }
+
+      input,
+      button {
+        width: 100%;
+      }
+    }
+  </style>
 </head>
 <body>
 
-<h2>Movie Download Search</h2>
+  <header>Movie Download Search</header>
 
-<div id="search-container">
-  <input type="text" id="search" placeholder="Search for a movie...">
-  <button id="search-btn">Search</button>
-</div>
+  <div class="container">
+    <div class="search-box">
+      <input type="text" id="search" placeholder="Search for a movie..." />
+      <button id="search-btn">Search</button>
+    </div>
 
-<div id="results"></div>
-
+    <div id="results" class="card-grid">
 <script>
   const rawData = `
 File Name: Narivetta 2025 Original 1080p HD
@@ -33569,3 +33522,4 @@ Download Link: https://download.moviespage.site/download/page/68482
 
 </body>
 </html>
+
