--- a/index.html
+++ b/index.html
@@ -7,36 +7,50 @@
   <style>
 /* === General Page === */
 body {
-  font-family: 'Inter', 'Segoe UI', Roboto, Arial, sans-serif;
-  background: #f9fafb;
-  color: #1f2937;
-  padding: 20px;
-  line-height: 1.5;
+  font-family: 'Segoe UI', Roboto, Arial, sans-serif;
+  background: #141414;
+  color: #f8f9fa;
+  margin: 0;
+  padding-top: 70px; /* space for header */
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+/* Header */
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 70px;
+  background: #141414;
+  border-bottom: 1px solid rgba(255,255,255,0.05);
+  display: flex;
+  align-items: center;
+  padding: 0 20px;
+  z-index: 1000;
+}
+
+header h1 {
+  margin: 0;
+  font-size: 24px;
+  font-weight: 700;
+  color: #e50914;
+  letter-spacing: 1px;
 }
 
 /* Wrapper */
 .wrap {
+  flex: 1;
   max-width: 860px;
   margin: 0 auto;
-  background: #ffffff;
-  border-radius: 14px;
-  padding: 28px;
-  border: 1px solid #e5e7eb;
-  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.05);
-  animation: fadeIn 0.4s ease-out;
-}
-
-/* Heading */
-h1 {
-  font-size: 28px;
-  margin: 0 0 14px 0;
-  font-weight: 700;
-  color: #111827;
+  padding: 24px;
 }
 
 /* Hint text */
 .hint {
-  color: #6b7280;
+  color: #b3b3b3;
   font-size: 14px;
   margin-bottom: 16px;
 }
@@ -51,33 +65,32 @@ h1 {
 input[type="text"] {
   flex: 1;
   padding: 12px;
-  border-radius: 8px;
-  border: 1px solid #d1d5db;
-  background: #ffffff;
-  color: #111827;
+  border-radius: 6px;
+  border: none;
+  background: #2f2f2f;
+  color: #fff;
   outline: none;
-  transition: border-color 0.2s ease, box-shadow 0.2s ease;
+  transition: background 0.2s ease;
 }
 
 input[type="text"]:focus {
-  border-color: #3b82f6;
-  box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.2);
+  background: #3f3f3f;
 }
 
 /* Buttons */
 button {
   padding: 12px 16px;
-  border-radius: 8px;
+  border-radius: 6px;
   border: none;
-  background: #3b82f6;
-  color: #ffffff;
+  background: #e50914;
+  color: #fff;
   font-weight: 600;
   cursor: pointer;
   transition: background 0.2s ease, transform 0.15s ease;
 }
 
 button:hover:not(:disabled) {
-  background: #2563eb;
+  background: #f40612;
   transform: translateY(-1px);
 }
 
@@ -88,17 +101,16 @@ button:disabled {
 
 /* Results */
 .result {
-  background: #f9fafb;
-  border: 1px solid #e5e7eb;
+  background: #1a1a1a;
+  border: 1px solid rgba(255,255,255,0.05);
   padding: 16px;
-  border-radius: 10px;
+  border-radius: 8px;
   margin-bottom: 14px;
-  animation: slideUp 0.3s ease;
-  transition: box-shadow 0.2s ease;
+  transition: transform 0.2s ease;
 }
 
 .result:hover {
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.04);
+  transform: translateY(-1px);
 }
 
 /* Meta Info */
@@ -107,22 +119,21 @@ pre.meta {
   margin: 0;
   font-family: Consolas, monospace;
   font-size: 14px;
-  color: #374151;
+  color: #ddd;
 }
 
 /* Links Section */
 .links {
   margin-top: 10px;
   padding: 10px;
-  background: #ffffff;
-  border: 1px solid #d1d5db;
-  border-radius: 8px;
+  background: #2f2f2f;
+  border-radius: 6px;
   font-size: 14px;
 }
 
 .links a {
   display: block;
-  color: #2563eb;
+  color: #e50914;
   text-decoration: none;
   padding: 6px 4px;
   border-radius: 4px;
@@ -130,42 +141,38 @@ pre.meta {
 }
 
 .links a:hover {
-  background: rgba(37, 99, 235, 0.08);
-  color: #1d4ed8;
+  background: rgba(229, 9, 20, 0.12);
+  color: #ff4b50;
 }
 
 /* Status Messages */
 .error {
-  color: #dc2626;
+  color: #ff7373;
 }
 
 .loading {
-  color: #ca8a04;
+  color: #ffcc66;
 }
 
-/* Bottom Note */
-.wrap > div:last-child {
-  color: #6b7280;
+/* Footer */
+footer {
+  background: linear-gradient(to right, #1a1a1a, #141414);
+  color: #b3b3b3;
   font-size: 13px;
-  margin-top: 14px;
-}
-
-/* Animations */
-@keyframes fadeIn {
-  from { opacity: 0; transform: translateY(8px); }
-  to { opacity: 1; transform: translateY(0); }
-}
-
-@keyframes slideUp {
-  from { opacity: 0; transform: translateY(6px); }
-  to { opacity: 1; transform: translateY(0); }
+  text-align: center;
+  padding: 16px;
+  border-top: 1px solid rgba(255,255,255,0.05);
 }
 
   </style>
 </head>
 <body>
+  <header>
+  <h1>Movies Aro</h1>
+</header>
+
   <div class="wrap">
-    <h1>Movie Search — Extract Download Links</h1>
+   
     <div class="hint">Type a search term and click <strong>Search</strong>. Results only appear after searching.</div>
 
     <div class="controls">
@@ -176,6 +183,9 @@ pre.meta {
     <div id="output" aria-live="polite"></div>
     <div style="margin-top:10px;color:#94a3b8;font-size:13px">Note: fetching uses <code>api.allorigins.win/raw?url=...</code> proxy. If a page blocks proxying, you may see an error.</div>
   </div>
+<footer>
+  © 2025 Movies Aro — All Rights Reserved
+</footer>
 
 <script>
 document.addEventListener('DOMContentLoaded', ()=> {
