--- a/index.html
+++ b/index.html
@@ -1,188 +1,150 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <title>Movie Search — Extract Download Links</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <style>
-/* === General Page === */
+<meta charset="utf-8" />
+<title>Movie Search — Extract Download Links</title>
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;800&display=swap" rel="stylesheet">
+<style>
+:root {
+  --bg: #0e1015;
+  --card: rgba(255, 255, 255, 0.05);
+  --accent: #4a90e2;
+  --accent2: #8e44ad;
+  --text: #f0f0f0;
+  --muted: #888;
+}
+
+* { box-sizing: border-box; }
+
 body {
-  font-family: 'Segoe UI', Roboto, Arial, sans-serif;
-  background: #141414;
-  color: #f8f9fa;
   margin: 0;
-  padding-top: 70px; /* space for header */
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
+  font-family: 'Outfit', sans-serif;
+  background: var(--bg);
+  color: var(--text);
 }
 
-/* Header */
 header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  height: 70px;
-  background: #141414;
-  border-bottom: 1px solid rgba(255,255,255,0.05);
-  display: flex;
-  align-items: center;
-  padding: 0 20px;
-  z-index: 1000;
+  text-align: center;
+  padding: 40px 20px 20px;
+  font-size: 2.5rem;
+  font-weight: 800;
+  background: linear-gradient(to right, var(--accent), var(--accent2));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
-header h1 {
-  margin: 0;
-  font-size: 24px;
-  font-weight: 700;
-  color: #e50914;
-  letter-spacing: 1px;
+footer {
+  text-align: center;
+  padding: 30px 20px;
+  font-size: 0.9rem;
+  color: var(--muted);
 }
 
-/* Wrapper */
-.wrap {
-  flex: 1;
-  max-width: 860px;
+.container {
+  max-width: 900px;
   margin: 0 auto;
-  padding: 24px;
+  padding: 20px;
 }
 
-/* Hint text */
-.hint {
-  color: #b3b3b3;
-  font-size: 14px;
-  margin-bottom: 16px;
-}
-
-/* Controls */
 .controls {
   display: flex;
+  flex-wrap: wrap;
   gap: 10px;
-  margin-bottom: 18px;
+  margin-bottom: 20px;
 }
 
-input[type="text"] {
-  flex: 1;
-  padding: 12px;
-  border-radius: 6px;
-  border: none;
-  background: #2f2f2f;
-  color: #fff;
-  outline: none;
-  transition: background 0.2s ease;
-}
-
-input[type="text"]:focus {
-  background: #3f3f3f;
-}
-
-/* Buttons */
-button {
-  padding: 12px 16px;
-  border-radius: 6px;
-  border: none;
-  background: #e50914;
-  color: #fff;
-  font-weight: 600;
-  cursor: pointer;
-  transition: background 0.2s ease, transform 0.15s ease;
-}
-
-button:hover:not(:disabled) {
-  background: #f40612;
-  transform: translateY(-1px);
-}
-
-button:disabled {
-  opacity: 0.5;
-  cursor: not-allowed;
-}
-
-/* Results */
-.result {
-  background: #1a1a1a;
-  border: 1px solid rgba(255,255,255,0.05);
-  padding: 16px;
+input, button {
+  padding: 14px;
   border-radius: 8px;
-  margin-bottom: 14px;
-  transition: transform 0.2s ease;
+  font-size: 1rem;
+  border: none;
+  outline: none;
+  transition: all 0.3s ease;
 }
 
-.result:hover {
-  transform: translateY(-1px);
+input {
+  flex: 1;
+  background: var(--card);
+  color: var(--text);
+  border: 1px solid #333;
 }
 
-/* Meta Info */
+input::placeholder { color: var(--muted); }
+
+button {
+  background: linear-gradient(to right, var(--accent), var(--accent2));
+  color: white;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+button:hover { filter: brightness(1.2); }
+
+.result {
+  background: var(--card);
+  border-radius: 16px;
+  padding: 20px;
+  margin-top: 20px;
+  backdrop-filter: blur(8px);
+  box-shadow: 0 0 15px rgba(255,255,255,0.05);
+  transition: 0.3s;
+}
+
+.result:hover { transform: scale(1.02); }
+
 pre.meta {
   white-space: pre-wrap;
+  font-family: inherit;
+  font-size: 1rem;
   margin: 0;
-  font-family: Consolas, monospace;
-  font-size: 14px;
-  color: #ddd;
 }
 
-/* Links Section */
 .links {
-  margin-top: 10px;
-  padding: 10px;
-  background: #2f2f2f;
-  border-radius: 6px;
-  font-size: 14px;
+  margin-top: 12px;
 }
 
 .links a {
-  display: block;
-  color: #e50914;
+  display: inline-block;
+  margin-top: 10px;
+  background: var(--accent);
+  color: white;
   text-decoration: none;
-  padding: 6px 4px;
-  border-radius: 4px;
-  transition: background 0.15s ease, color 0.15s ease;
+  padding: 10px 18px;
+  border-radius: 6px;
+  font-weight: 600;
+  transition: all 0.3s;
 }
 
-.links a:hover {
-  background: rgba(229, 9, 20, 0.12);
-  color: #ff4b50;
-}
+.links a:hover { background: var(--accent2); }
 
-/* Status Messages */
-.error {
-  color: #ff7373;
-}
+.error { color: #ff7b7b; }
+.loading { color: #f1c40f; }
 
-.loading {
-  color: #ffcc66;
+/* Responsive adjustments */
+@media (max-width: 600px) {
+  .controls { flex-direction: column; }
+  input, button { width: 100%; }
 }
-
-/* Footer */
-footer {
-  background: linear-gradient(to right, #1a1a1a, #141414);
-  color: #b3b3b3;
-  font-size: 13px;
-  text-align: center;
-  padding: 16px;
-  border-top: 1px solid rgba(255,255,255,0.05);
-}
-
-  </style>
+</style>
 </head>
 <body>
-  <header>
-  <h1>Movies Aro</h1>
-</header>
 
-  <div class="wrap">
-   
-    <div class="hint">Type a search term and click <strong>Search</strong>. Results only appear after searching.</div>
+<header>Movies Aro</header>
 
-    <div class="controls">
-      <input id="q" type="text" placeholder="e.g. Narivetta 2025" />
-      <button id="searchBtn">Search</button>
-    </div>
+<div class="container">
+  <div class="hint">Type a search term and click <strong>Search</strong>. Results only appear after searching.</div>
 
-    <div id="output" aria-live="polite"></div>
-    <div style="margin-top:10px;color:#94a3b8;font-size:13px">Note: fetching uses <code>api.allorigins.win/raw?url=...</code> proxy. If a page blocks proxying, you may see an error.</div>
+  <div class="controls">
+    <input id="q" type="text" placeholder="e.g. Narivetta 2025" />
+    <button id="searchBtn">Search</button>
   </div>
+
+  <div id="output" aria-live="polite"></div>
+  <div style="margin-top:10px;color:var(--muted);font-size:13px">
+    Note: fetching uses <code>api.allorigins.win/raw?url=...</code> proxy. If a page blocks proxying, you may see an error.
+  </div>
+</div>
 <footer>
   © 2025 Movies Aro — All Rights Reserved
 </footer>
@@ -25698,3 +25660,4 @@ File Size: ${escapeHtml(f.size)}</pre>
 </script>
 </body>
 </html>
+
